--- a/src/Tree.css
+++ b/src/Tree.css
@@ -2,7 +2,71 @@
     display: none;
 }
 
-.tree_handles {
+li {
+    display: block;
+}
+
+.material-icons {
     cursor: pointer;
+    font-size: 18px;
     vertical-align: bottom;
+    color: #777;
+}
+
+.placeholder {
+    padding: 0px 9px;
+}
+
+input[type=checkbox]:not(old) {
+    width: 2em;
+    margin: 0;
+    padding: 0;
+    font-size: 1em;
+    opacity: 0;
+}
+
+input[type=checkbox]:not(old) + label {
+    display: inline-block;
+    margin-left: -2em;
+    line-height: 1.5em;
+}
+
+input[type=checkbox]:not(old) + label > span {
+    display: inline-block;
+    width: 0.875em;
+    height: 0.875em;
+    margin: 0.25em 0.5em 0.15em 0.25em;
+    border: 0.0625em solid rgb(192, 192, 192);
+    border-radius: 0.25em;
+    background-image: linear-gradient(rgb(240, 240, 240), rgb(224, 224, 224));
+    vertical-align: bottom;
+}
+
+input[type=checkbox]:not(old):checked + label > span {
+    background-image: linear-gradient(#EE6F5F, #EE7F5F);
+}
+
+input[type=checkbox]:not(old):checked + label > span:before {
+    content: '✓';
+    display: block;
+    width: 1em;
+    color: #ffffff;
+    font-size: 0.875em;
+    line-height: 1em;
+    text-align: center;
+    text-shadow: 0 0 0.0714em rgb(115, 153, 77);
+    font-weight: bold;
+}
+
+input[type=checkbox]:not(old):indeterminate + label > span:before {
+    content: '‒';
+    display: block;
+    width: 1em;
+    color: #ffffff;
+    font-size: 0.875em;
+    line-height: 1em;
+    text-align: center;
+    text-shadow: 0 0 0.0714em rgb(115, 153, 77);
+    font-weight: bold;
+    background-image: linear-gradient(#EE6F5F, #EE7F5F);
 }
